--- a/themes/wonderland/layouts/_default/baseof.html
+++ b/themes/wonderland/layouts/_default/baseof.html
@@ -7,11 +7,10 @@
   {{ partial "head.html" . }}
 </head>
 <body class="">
-{{ $container := cond $.Site.Params.FullWidthTheme "container full" (cond $.Site.Params.CenterTheme "container center" "container") }}
 
 {{ partial "header.html" . }}
 
-<div class="{{- $container -}}">
+<div class="container">
 
   <div class="content">
     {{ block "main" . }}
