--- a/themes/wonderland/layouts/partials/footer.html
+++ b/themes/wonderland/layouts/partials/footer.html
@@ -17,6 +17,7 @@
 </footer>
 
 <script src="{{ "js/main.js" | absURL }}"></script>
+<script src="{{ "js/dropdown.js" | absURL }}"></script>
 
 <!-- Extended footer section-->
 {{ partial "extended_footer.html" . }}
