--- a/themes/wonderland/layouts/partials/head.html
+++ b/themes/wonderland/layouts/partials/head.html
@@ -1,4 +1,9 @@
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+<meta name="description" content="{{ if .IsHome }}{{ .Site.Params.Subtitle }}{{ else }}{{ .Summary | plainify }}{{ end }}"/>
+<meta name="keywords" content="{{ with .Params.Keywords }}{{ delimit . ", " }}{{ else }}{{ $.Site.Params.Keywords }}{{ end }}"/>
+<meta name="robots" content="noodp"/>
+
 <link href="{{ "fontawesome-free-5.12.0-web/css/all.css" | absURL }}" rel="stylesheet"> <!--load all styles -->
 <link rel="stylesheet" href="{{ "css/bulma.min.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/highlight.css" | absURL }}">
