--- a/themes/wonderland/layouts/partials/menu.html
+++ b/themes/wonderland/layouts/partials/menu.html
@@ -21,7 +21,12 @@
                     </div>
                 </div>
             {{ else }}
-                <a class="navbar-item" href="{{ .URL }}">{{ .Name }}</a>
+                <a class="navbar-item" href="{{ .URL }}">
+                    {{ if .Pre }}
+                        <i class="fas fa-{{ .Pre }}"></i>
+                    {{ end }}
+                    {{ .Name }}
+                </a>
             {{ end }}
         {{ end }}
         <span class="navbar-item">
@@ -29,7 +34,7 @@
             <span class="icon">
             <i class="fab fa-github"></i>
             </span>
-            <span>Download</span>
+            <span>Github</span>
         </a>
         </span>
     </div>
