Theme change; Add menu

--- a/themes/wonderland/layouts/partials/header.html
+++ b/themes/wonderland/layouts/partials/header.html
@@ -30,7 +30,7 @@
   
   <!-- Hero footer: will stick at the bottom -->
   <div class="hero-foot">
-    <nav class="tabs is-boxed">
+    <nav class="tabs">
       <div class="container">
         <ul>
           <li class="is-active"><a>Posts</a></li>
