--- a/.vitepress/theme/styles/markdown.scss
+++ b/.vitepress/theme/styles/markdown.scss
@@ -96,6 +96,7 @@
     a {
         @apply text-sky-600 font-medium !important;
         @apply hover:text-sky-800 !important;
+        @apply break-words whitespace-pre-wrap;
 
         &.header-anchor {
             @apply float-left;
@@ -117,6 +118,14 @@
     ul,
     ol {
         @apply pl-5;
+    }
+
+    ul {
+        @apply list-disc;
+    }
+
+    ol {
+        @apply list-decimal;
     }
 
     li>ul,
